# SudokuSolver

./: .gitignore  CONTRIBUTING.md  README.md  app.py  dev-requirements.txt  pyproject.toml  run.py  setup.py  solver.py  tox.ini
imageprocessing/: processing.py
static/: script.js  styles.css
templates/: index.html
