[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.mypy]
mypy_path = "bin"

[[tool.mypy.overrides]]
module = ["imutils.perspective",
    "tensorflow.keras.models",
    "numpy",
    "imutils",
    "imutils.perspective",
    "flask",
    "flask_cors",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [
  "bin"
]